--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,15 @@
 
   <build>
     <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <configLocation>./checkstyle.xml</configLocation>
+        </configuration>
+
+      </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
@@ -38,6 +47,11 @@
 			</archive>
 		</configuration>
 	</plugin>
+	<plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.0.0</version>
+      </plugin>
    </plugins>
   </build>
 	
@@ -75,7 +89,9 @@
 		  <artifactId>maven-project-info-reports-plugin</artifactId>
 		  <version>2.7</version>
 		</plugin>
+		
       </plugins>
+      <outputDirectory>target/site</outputDirectory>
     </reporting>
 
 	<dependencies>
@@ -85,5 +101,10 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		 <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs</artifactId>
+            <version>4.0.1</version>
+          </dependency>
 	</dependencies>
 </project>
